feat: Rework requirements